--- a/layouts/_default/single.html
+++ b/layouts/_default/single.html
@@ -2,18 +2,16 @@
 <div class="article-wrapper l-container">
   <article class="article">
     <h1 class="article-title">{{ .Title }}</h1>
-    <ul class="article-metadata">
-      <li class="article-metadata-date">
+    <div class="article-meta">
+      <span class="article-date">
         {{ .Date.Format "01-02-2006" }}
-      </li>
-      <ul class="article-metadata-categories">
-        {{ range first 2 (.GetTerms "categories") }}
-          <li class="article-metadata-categories-single">
-            <a href="{{ .Permalink }}">{{ .LinkTitle }}</a>
-          </li>
-        {{ end }}
-      </ul>
-    </ul>
+      </span>
+      {{ range first 2 (.GetTerms "categories") }}
+      <a href="{{ .Permalink }}" class="article-category">
+        {{- .LinkTitle -}}
+      </a>
+      {{ end }}
+    </div>
     {{ .Content }} 
   </article>
 </div>
