--- a/layouts/_default/single.html
+++ b/layouts/_default/single.html
@@ -3,11 +3,11 @@
   <article class="article">
     <h1 class="article-title">{{ .Title }}</h1>
     <div class="article-meta">
-      <span class="article-date">
+      <span class="article-meta-date">
         {{ .Date.Format "01-02-2006" }}
       </span>
       {{ range first 2 (.GetTerms "categories") }}
-      <a href="{{ .Permalink }}" class="article-category">
+      <a href="{{ .Permalink }}" class="article-meta-category">
         {{- .LinkTitle -}}
       </a>
       {{ end }}
