Switch post summary to front matter description
Switch post summary on list page to be the 'description' property
on the page's front matter.
If not such description exists then the regular Hugo page summary is
used as fallback.

--- a/layouts/_default/list.html
+++ b/layouts/_default/list.html
@@ -16,9 +16,13 @@
           {{- .LinkTitle -}}
         </a>
       {{ end }}
-      <div class="posts-single-summary">
-        {{ .Summary }}
-      </div>
+      <p class="posts-single-summary">
+        {{ with .Params.description }}
+        {{ . | htmlUnescape | plainify }}
+        {{ else }}
+        {{ .Summary | htmlUnescape | plainify }}
+        {{ end }}
+      </p>
     </div>
     {{ end }}
   </div>
