Fix stylesheet URL not resolving correctly
Fix stylesheet URL not resolving correctly because of a Hugo quirk with
URLs starting with a slash.

--- a/layouts/_default/baseof.html
+++ b/layouts/_default/baseof.html
@@ -6,7 +6,7 @@
       name="viewport"
       content="width=device-width, initial-scale=1.0, maximum-scale=1.0"
     />
-    <link rel="stylesheet" href="{{ absURL "/main.css" }}">
+    <link rel="stylesheet" href="{{ absURL "main.css" }}">
     <title>{{ .Title }}</title>
   </head>
   <body class="pagewrapper">
