Add margins in home page for list items

--- a/layouts/index.html
+++ b/layouts/index.html
@@ -11,7 +11,7 @@
     <nav>
       <ul class="section-posts">
       {{ range first 4 .Pages }}
-      <li>
+      <li class="section-posts-single">
         <a href="{{ .Permalink }}">
           {{ .Title }}
         </a>
