--- a/src/modules/section.scss
+++ b/src/modules/section.scss
@@ -18,6 +18,10 @@
     list-style: none;
     margin: 0;
     padding: 0;
+
+    &-single {
+      margin-bottom: var(--space-200);
+    }
   }
 
   &-seeall {
