Add extra margins to posts in list page

--- a/layouts/_default/list.html
+++ b/layouts/_default/list.html
@@ -3,8 +3,8 @@
   <div class="posts l-container">
     {{ range .Pages }}
     <div class="posts-single">
-      <div>
-        <a href="{{ .Permalink }}" class="posts-single-title">
+      <div class="posts-single-title">
+        <a href="{{ .Permalink }}" class="posts-single-title-active">
           {{ .Title }}
         </a>
       </div>
