--- a/src/modules/post-list.scss
+++ b/src/modules/post-list.scss
@@ -7,10 +7,14 @@
     margin-bottom: var(--space-500);
 
     &-title {
-      font-size: var(--type-size-300);
-      font-style: oblique var(--font-style-200);
-      font-weight: var(--type-weight-500);
-      text-decoration: none;
+      margin-bottom: var(--space-200);
+      
+      &-active {
+        font-size: var(--type-size-300);
+        font-style: oblique var(--font-style-200);
+        font-weight: var(--type-weight-500);
+        text-decoration: none;
+      }
     }
 
     &-date {
@@ -24,7 +28,7 @@
     &-summary {
       color: var(--color-accent-f500);
       margin-bottom: 0;
-      margin-top: var(--space-100);
+      margin-top: var(--space-300);
       max-width: 500px;
     }
   }
