--- a/src/modules/post-list.scss
+++ b/src/modules/post-list.scss
@@ -31,5 +31,9 @@
       margin-top: var(--space-300);
       max-width: 500px;
     }
+
+    &-readmore {
+      margin-top: var(--space-200);
+    }
   }
 }
