--- a/src/base/reset.scss
+++ b/src/base/reset.scss
@@ -3,6 +3,34 @@ html {
   scroll-behavior: smooth;
 }
 
-body {
+/* Remove default margin */
+body,
+h1,
+h2,
+h3,
+h4,
+p,
+ul[class],
+ol[class],
+li,
+figure,
+figcaption,
+blockquote,
+dl,
+dd {
   margin: 0;
+}
+
+body {
+  min-height: 100%;
+}
+
+/* Remove list styles on ul, ol elements with a class attribute */
+ul[class],
+ol[class] {
+  list-style: none;
+}
+
+button {
+  font-family: inherit;
 }
