Add single-page-margins mixin
Add single-page-margins mixin that is currently being included in
the artile css module.

It's purpose is to apply margins to all elements in the Hugo 'content'
template variable. Example elements are headings, lists and list items,
paragraphs, code blocks and more.

--- a/src/index.scss
+++ b/src/index.scss
@@ -2,6 +2,7 @@
 
 // Mixins
 @import 'mixins/responsive-block';
+@import 'mixins/single-page-margins';
 
 // Theme Systemization
 @import 'theme/screens';
