Wrap hugo {{ content }} in it's own div
Wrap the content template variable in it's own div to apply styling
specifically for it.

--- a/layouts/_default/single.html
+++ b/layouts/_default/single.html
@@ -12,7 +12,9 @@
       </a>
       {{ end }}
     </div>
-    {{ .Content }} 
+    <div class="article-content">
+      {{ .Content }} 
+    </div>
   </article>
 </div>
 {{ end }}
