--- a/src/mixins/single-page-margins.scss
+++ b/src/mixins/single-page-margins.scss
@@ -4,7 +4,7 @@
     margin-top: var(--space-100);
   }
 
-  ol, ul {
+  ol ul {
     margin-bottom: var(--space-200);
     margin-top: var(--space-100);
   }
